--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -55,14 +55,14 @@
                                                 <label class="form-check-label" for="inputRememberPassword">Remember Password</label>
                                             </div> -->
                                             <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
-                                                <a class="small" href="password.html">Forgot Password?</a>
+                                                <a class="small" href="#">Forgot Password?</a>
                                                 <!-- <a class="btn btn-primary" href="index.html" type=>Login</a> -->
                                                 <button type="submit" class="btn btn-primary">Login</button>
                                             </div>
                                         </form>
                                     </div>
                                     <div class="card-footer text-center py-3">
-                                        <div class="small"><a href="register.html">Need an account? Sign up!</a></div>
+                                        <div class="small"><a href="#">Need an account? Sign up!</a></div>
                                     </div>
                                 </div>
                             </div>
