--- a/reception/templates/reception/navbar.html
+++ b/reception/templates/reception/navbar.html
@@ -1,3 +1,5 @@
+
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white">
     <div class="container-fluid">
       <a class="navbar-brand" href="#"><b>Kairos Medical Services</b></a>
@@ -12,7 +14,11 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'dashboard' %}">My Dashboard</a>
           </li>
-          <li class="nav-item dropdown">
+
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'list_tests' %}">View Tests</a>
+          </li>
+          <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Dropdown
             </a>
@@ -22,14 +28,18 @@
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">Something else here</a></li>
             </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
-          </li>
+          </li> -->
           
+          {% if request.user.is_manager %}
+            
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'management' %}">Management</a>
+          </li>
+          {% endif %}
+
           {% if request.user.is_authenticated %}
-          <div class='d-flex flex-row-reverse'>
-            <li class="nav-item">
+          <div>
+            <li class="nav-item justify-content-end'">
               <form method="POST">
                 {% csrf_token %}
                   <a class="nav-link " href="{% url 'logout' %}"><b>Logout</b></a>
