Added CSS media query

--- a/reception/templates/reception/base.html
+++ b/reception/templates/reception/base.html
@@ -25,8 +25,11 @@
       * {
         font-family: 'Montserrat', sans-serif;
       }
-      #tests {
+      
+      @media only screen and (min-width:600px) {
+        #tests {
           height: 600px;
+      }  
       }
     </style>
     {# Check if a user has the reception group, if so, show the nav bar. #}
