--- a/reception/templates/reception/home.html
+++ b/reception/templates/reception/home.html
@@ -4,7 +4,7 @@
 {% load widget_tweaks %}
 
 {% block content %} 
-
+<link rel="stylesheet" href="{% static 'custom.css' %}">
 {% if messages %} 
   {% for message in messages %}
     <div class="alert alert-{{message.tags}} alert-dismissible fade show" role="alert">
@@ -35,7 +35,7 @@
     <label for="email">Patient's Email Address</label>
     {% render_field form.email_address class="form-control" id="email"%}
     
-    <label for="tests">Tests to carry*</label>
+    <label for="tests">Tests to carry*</label><br>
     {% render_field form.tests_to_carry class="form-control" type="select" id="tests"%}
         
     <hr>
@@ -52,5 +52,9 @@
     {% endfor %}
   </form>
 </div>
+    {{ form.media.js }}
+</body>
+
+
 
 {% endblock content %}
