--- a/static/custom.css
+++ b/static/custom.css
@@ -4,3 +4,8 @@ input[type="checkbox"]{
     flex-direction: row;
     justify-content: space-between;
 }
+
+#tests {
+    width: 100%;
+    height: 500px;
+}
