Added form media

--- a/reception/templates/reception/patient_detail_and_edit.html
+++ b/reception/templates/reception/patient_detail_and_edit.html
@@ -69,7 +69,7 @@
     <hr>
     <button type="submit" class="btn btn-danger">Update</button>    
     <hr>
-
+    {{ form.media.js }}
     
 </form>
 
