Changed html tag for error message from div to h6

--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -77,9 +77,7 @@
                                         {% if field.errors %}
                                             
                                             {% for error in field.errors %}
-                                                <div class="error-field p-5" style="text-align: center;">
-                                                    {{error}}
-                                                </div>
+                                                    <h6 style="text-align: center;">{{error}}</h6>
                                             {% endfor %}
                                                 
                                         {% endif %}
