--- a/reception/templates/reception/base.html
+++ b/reception/templates/reception/base.html
@@ -20,6 +20,7 @@
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="{% static 'django_select2/django_select2.css' %}">
     <title>Kairos Medical Services</title>
     <link rel="stylesheet" href="{% static 'custom.css' %}">
   </head>
