Changed te extends tag to rather extend from baae.html in the common app rather than that in reception

--- a/reception/templates/reception/home.html
+++ b/reception/templates/reception/home.html
@@ -1,11 +1,14 @@
-{% extends 'reception/base.html' %} 
+{% extends 'common/base.html' %} 
 {% load crispy_forms_tags %} 
 {% load static%}
 {% load widget_tweaks %}
 
 {% block content %} 
-<link rel="stylesheet" href="{% static 'custom.css' %}">
-{% if messages %} 
+
+
+
+<div class="container p-5">
+  {% if messages %} 
   {% for message in messages %}
     <div class="alert alert-{{message.tags}} alert-dismissible fade show" role="alert">
       <strong>{{message}}</strong>
@@ -14,47 +17,52 @@
   {% endfor %} 
 {% endif %}
 
-<div class="container p-5 bg-dark text-white">
-  <h1 style="text-align: center">Add New Patient</h1>
-  <hr />
-  <form method="POST">
-    {% csrf_token %}
+{% for field in form %}           
+  {% if field.errors %}                            
+    {% for error in field.errors %}
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+      <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+      <strong>{{error}}</strong>
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+    {% endfor %}                                        
+  {% endif %}                                        
+{% endfor %}
 
-    <label for="name">Patient's Name*</label>
-    {% render_field form.patients_name class="form-control" id="name" %}
+  <div class="card bg-light">
+    <div class="form-group p-5">
+      <h1 style="text-align: center">Add New Patient</h1>
+      <hr />
+      <form method="POST">
+        {% csrf_token %}
 
-    <label for="age">Patient's Age*</label>
-    {% render_field form.patients_age class="form-control" id="age" %}
+        <label for="name">Patient's Name*</label>
+        {% render_field form.patients_name class="form-control" id="name" %}
 
-    <label for="sex">Patient's Sex*</label>
-    {% render_field form.patients_sex class="form-control" id="sex"%}
+        <label for="age">Patient's Age*</label>
+        {% render_field form.patients_age class="form-control" id="age" %}
 
-    <label for="contact">Patient's Contact*</label>
-    {% render_field form.patients_contact class="form-control" id="contact" type="textarea" height="100"%}
+        <label for="sex">Patient's Sex*</label>
+        {% render_field form.patients_sex class="form-control" id="sex"%}
 
-    <label for="email">Patient's Email Address</label>
-    {% render_field form.email_address class="form-control" id="email"%}
-    
-    <label for="tests">Tests to carry*</label><br>
-    {% render_field form.tests_to_carry class="form-control" type="select" id="tests"%}
+        <label for="contact">Patient's Contact*</label>
+        {% render_field form.patients_contact class="form-control" id="contact" %}
+
+        <label for="email">Patient's Email Address</label>
+        {% render_field form.email_address class="form-control" id="email"%}
         
-    <hr>
-    
-    <button type="submit" class="btn btn-primary">Submit</button>
-    {% for field in form %}           
-        {% if field.errors %}                            
-        {% for error in field.errors %}
-            <div class="error-field p-5" style="text-align: center;">
-              {{error}}
-            </div>
-        {% endfor %}                                        
-        {% endif %}                                        
-    {% endfor %}
-  </form>
+        <label for="tests">Tests to carry*</label><br>
+        {% render_field form.tests_to_carry class="form-control" type="select" id="tests"%}
+            
+        <hr>
+        
+        <button type="submit" class="btn btn-primary">Submit</button>
+        
+      </form>
+    </div>
+      {{ form.media.js }}
+    </div>  
 </div>
-    {{ form.media.js }}
 </body>
-
-
 
 {% endblock content %}
