--- a/reception/templates/reception/patient_detail_and_edit.html
+++ b/reception/templates/reception/patient_detail_and_edit.html
@@ -1,4 +1,4 @@
-{% extends 'reception/base.html' %}
+{% extends 'common/base.html' %}
 {% load crispy_forms_tags %}
 {% load widget_tweaks %}
 {% block content %}
