--- a/reception/templates/reception/days_summary.html
+++ b/reception/templates/reception/days_summary.html
@@ -1,4 +1,4 @@
-{% extends 'reception/base.html' %}
+{% extends 'common/base.html' %}
 
 {% block content %}
 <!-- <div class="shadow p-3 mb-5 bg-body rounded">
